# karpathy_kb

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.py  main.py  model.txt  pyproject.toml  requirements.txt  setup.bat
output/sessions/: default.md
raw/notes/: linda_chalker.md  orchid.md  plants.md
src/: compiler.py  config.py  config.py.example  ingest.py  linter.py  llm.py  query_engine.py  test_llm.py
wiki/: README.md
wiki/concepts/: 兰花.md  杜鹃花.md  柳树.md  梅花.md  梧桐.md  银杏.md
wiki/index/: compiled_files.json  tag.json
wiki/people/: 林德·蔡尔斯.md
